# atmegaclock2

./: CMakeLists.txt  README.md
include/: buzzer.h  cmake_config_info.h.in  eeprom.h  i2c.h  lcd.h  rtc.h
include/ui/: alarm.h  clock.h  menu.h  ui.h
src/: buzzer.c  eeprom.c  i2c.c  lcd.c  main.c  rtc.c
src/ui/: alarm.c  clock.c  menu.c  ui.c
